class_name End_Block
extends Area2D

@onready var sprite = $end_block_sprite
@onready var end_block_collisionshape = $end_block_collisionshape
@onready var connector_collisionshape = $connector_collisionshape

# Called when the node enters the scene tree for the first time.
#func _ready():
#	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
